# QT-QRScanner

./: .gitignore  Benchmark.cpp  Benchmark.h  CMakeLists.txt  Logger.cpp  README.md  main.cpp
libs/: CMakeLists.txt
libs/qrtopng/: CMakeLists.txt
resources/: scan_text.xcf
src/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  CSVParser.cpp  CSVParser.h  Capture.cpp  Capture.h  DetectedQRDialog.cpp  DetectedQRDialog.h  DetectedQRDialog.ui  DetectedQRDialog.ui.autosave  Dropdown.cpp  Dropdown.h  Dropdown.ui  EmailToolDialog.cpp  EmailToolDialog.h  EmailToolDialog.ui  Logger.cpp  Logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
